Fix overflow

--- a/style-wl.css
+++ b/style-wl.css
@@ -4,7 +4,7 @@ body {
     padding: 0;
     font-family: verdana,arial,helvetica,sans-serif;
     font-size: 0.80em;
-    overflow-y: hidden;
+    overflow: hidden;
 }
 .side-block {
     padding: 3px;
